--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
           <h2>Self Employed</h2>
         </div>
         <div class="desc">
-            <h3>Proframmer</h3>
+            <h3>Programmer</h3>
             <p>Oct 2022 - present</p>
         </div>
       </div>
