--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link id='favicon' rel="shortcut icon" href="assets/images/ashrafeesa.jpg" type="image/x-png">
     <title>Portfolio | Ashraf Eesa</title>
 </head>
-<body oncontextmenu="return false">
+<body>
 
 <!-- pre loader -->
 <!-- <div class="loader-container">
